--- a/m4d/Views/Song/Merge.cshtml
+++ b/m4d/Views/Song/Merge.cshtml
@@ -134,7 +134,7 @@
 <input name="Commit" type="submit" value="Okay" class="btn btn-small btn-primary" />
 <input name="Commit" type="submit" value="Cancel" class="btn btn-small btn-primary" />
 
-@Html.ActionLink("Back to List", ((SongFilter)ViewBag.SongFilter).TargetAction, new { filter = ViewBag.SongFilter }, new { @class = "btn btn-small btn-primary", role = "button" })
+@Html.ActionLink("Back to Search Results", ((SongFilter)ViewBag.SongFilter).TargetAction, new { filter = ViewBag.SongFilter }, new { @class = "btn btn-small btn-primary", role = "button" })
 }
 
 @section Scripts {
