--- a/m4d/Content/Site.css
+++ b/m4d/Content/Site.css
@@ -15,6 +15,10 @@ section {
     margin-top: -50px;
 }
 
+.spaced-row {
+    padding-top: 1em;
+}
+
 /* Set width on the form input elements since they're 100% wide by default */
 input,
 select,
