--- a/m4d/Views/Song/Create.cshtml
+++ b/m4d/Views/Song/Create.cshtml
@@ -9,7 +9,7 @@
 @Html.Partial("EditCore")
 
 <div>
-    @Html.ActionLink("Back to List", ((SongFilter)ViewBag.SongFilter).TargetAction, new { filter = ViewBag.SongFilter }, new { @class = "btn btn-small btn-primary", role = "button" })
+    @Html.ActionLink("Back to Search Results", ((SongFilter)ViewBag.SongFilter).TargetAction, new { filter = ViewBag.SongFilter }, new { @class = "btn btn-small btn-primary", role = "button" })
 </div>
 
 @section Scripts {
