--- a/m4d/Views/Song/SpotifyCreated.cshtml
+++ b/m4d/Views/Song/SpotifyCreated.cshtml
@@ -12,7 +12,10 @@
 
 <div class="row">
     <div class="col-sm-6"><iframe src="@playUrl" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></div>
-    <div class="col-sm-6 big-text">Follow music4dance on Spotify<iframe src="https://open.spotify.com/follow/1/?uri=spotify:user:ebo1rk39vp51kkyjps45eobph&size=basic&theme=light" width="200" height="25" scrolling="no" frameborder="0" style="border: none; overflow: hidden;" allowtransparency="true"></iframe></div>
+    <div class="col-sm-6 big-text">
+        <p>Follow music4dance on Spotify<iframe src="https://open.spotify.com/follow/1/?uri=spotify:user:ebo1rk39vp51kkyjps45eobph&size=basic&theme=light" width="200" height="25" scrolling="no" frameborder="0" style="border: none; overflow: hidden;" allowtransparency="true"></iframe></p>
+        <p>@Html.ActionLink("Back to Search Results", ((SongFilter)ViewBag.SongFilter).TargetAction, new { filter = ViewBag.SongFilter }, new { @class = "btn btn-small btn-primary", role = "button" })</p>
+    </div>
 </div>
 
 
