--- a/m4d/App_Code/SongHelper.cshtml
+++ b/m4d/App_Code/SongHelper.cshtml
@@ -1,4 +1,7 @@
-﻿@using System.Web.Mvc
+﻿@using System.Collections.Generic
+@using System.Linq
+@using System.Net
+@using System.Web.Mvc
 @using System.Web.Mvc.Html
 @using m4dModels
 @using Microsoft.Azure.Search.Models
