--- a/m4d/App_Code/TagHelpers.cshtml
+++ b/m4d/App_Code/TagHelpers.cshtml
@@ -1,4 +1,7 @@
-﻿@using m4dModels
+﻿@using System
+@using System.Linq
+@using System.Net
+@using m4dModels
 
 @* ReSharper disable once InvertIf *@
 @helper TagModalButton(TagCount tag, SongFilter filter, Song song, float cloudSize = 0.0f)
