--- a/m4d/Views/Home/PrivacyPolicy.cshtml
+++ b/m4d/Views/Home/PrivacyPolicy.cshtml
@@ -40,13 +40,13 @@
 </p>
 
 <h2 id="GDPR">
-    In light of the European Union's new GDPR rule, we're including the following specific details of our data use.
+    In light of the European Union's GDPR rule and California's CCPA, we're including the following specific details of our data use.
 </h2>
 
 <h3>All visitors to music4dance.net:</h3>
 <ul>
-    <li>We collect data and use cookies to improve your experience by measuring anonymized user data via Google Analytics.  Specifically we do not associate Google Analytics data with your music4dance.net account</li>
-    <li>We collect data and use cookies for ad personalization and measurement.  We do not start displaying ads until the cookie consent button is clicked.</li>
+    <li>We collect data and use cookies to improve your experience by measuring anonymized user data via Google Analytics.  Specifically we do not associate Google Analytics data with your music4dance.net account and we anonymize your IP address before sending it to Google Analytics</li>
+    <li>We collect data and use cookies for ad personalization and measurement.  We do not start displaying ads until the cookie consent button is clicked. In addition, we've set adsense to <a href="https://support.google.com/adsense/answer/9560818?hl=en">restrict data processing</a> fro all California residents</li>
 </ul>
 
 <h3>music4dance.net Account Holders:</h3>
@@ -71,10 +71,10 @@
 <p>The specifics of your user profile information is available to you on your <a href="https://www.music4dance.net/manage/userprofile">user profile page</a>.</p>
 <p>The specifics of your saved searches are available to you on your <a href="https://www.music4dance.net/manage/userprofile">user profile page</a>.</p>
 <p>The specifics of your searches, likes and tags are available on your "My searches" and "My songs" pages under the account menu.</p>
-<p>You may permenantly delete all of your personal information and remove your account access by choosing the <b>delete</b> option from your <a href="https://www.music4dance.net/manage/settings">account settings</a> page.</p>
+<p>You may permanently delete all of your personal information and remove your account access by choosing the <b>delete</b> option from your <a href="https://www.music4dance.net/manage/settings">account settings</a> page.</p>
 
 <h3>Data Protection</h3>
-<p>All of the above data is stored in a Microsoft SQL database in the Microsoft Azure cloud and is only accessable via the music4dance.net site by anyone other than music4dance.net employees.  A very limitted number of music4dance.net employees (currently 1) have access to the underlying database via the Azure portal.</p>
+<p>All of the above data stored by music4dance is stored in a Microsoft SQL database in the Microsoft Azure cloud and is only accessible via the music4dance.net site by anyone other than music4dance.net employees.  A very limited number of music4dance.net employees (currently 1) have access to the underlying database via the Azure portal.</p>
 
 <p>More information on how Google uses cookies to manage ads is available <a href="https://policies.google.com/technologies/ads">here</a>.</p>
 <p>If you would like more information about what cookies are and how to disable them <a href="https://cookiesandyou.com/">this website</a> is an excellent reference.</p>
