--- a/m4d/Views/Shared/_Layout.cshtml
+++ b/m4d/Views/Shared/_Layout.cshtml
@@ -64,7 +64,7 @@
             a.src = g;
             m.parentNode.insertBefore(a, m)
         })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-
+        ga('set', 'anonymizeIp', true);
         ga('create', 'UA-54250212-1', 'auto');
         ga('send', 'pageview');
     </script>
