--- a/m4d/Views/Shared/_ListSongs.cshtml
+++ b/m4d/Views/Shared/_ListSongs.cshtml
@@ -1,7 +1,10 @@
-﻿@using System.Linq
+﻿@using System
+@using System.Collections.Generic
+@using System.Linq
+@using System.Net
 @using DanceLibrary
 @using Newtonsoft.Json
-@model IEnumerable<Song>
+@model System.Collections.Generic.IEnumerable<Song>
 
 @{
     var isAdmin = User.IsInRole("dbAdmin");
