--- a/m4d/Areas/Identity/Pages/Shared/_WhySignUp.cshtml
+++ b/m4d/Areas/Identity/Pages/Shared/_WhySignUp.cshtml
@@ -7,11 +7,11 @@
 <h4>@prefix you can:</h4>
 <hr />
 <ul class="list-clean-aligned big-text">
-    <li><span class="glyphicon glyphicon-tags"></span> <a href="https://music4dance.blog/music4dance-help/tag-editing/">Tag songs</a></li>
-    <li><span class="glyphicon glyphicon-search"></span> <a href="https://music4dance.blog/music4dance-help/advanced-search/">Search on songs you've tagged</a></li>
-    <li><span class="glyphicon glyphicon-heart"></span> <a href="https://music4dance.blog/are-there-songs-that-you-never-want-to-dance-to-again/">Like and unlike songs</a></li>
-    <li><span class="glyphicon glyphicon-remove"></span> <a href="https://music4dance.blog/are-there-songs-that-you-never-want-to-dance-to-again/">Hide songs you've "unliked"</a></li>
-    <li><span class="glyphicon glyphicon-file"></span><a href="https://music4dance.blog/music4dance-help/saved-searches/">Save your searches</a></li>
+    <li><span class="fas fa-tags"></span>&nbsp;<a href="https://music4dance.blog/music4dance-help/tag-editing/">Tag songs</a></li>
+    <li><span class="fas fa-search"></span>&nbsp;<a href="https://music4dance.blog/music4dance-help/advanced-search/">Search on songs you've tagged</a></li>
+    <li><span class="fas fa-heart"></span>&nbsp;<a href="https://music4dance.blog/are-there-songs-that-you-never-want-to-dance-to-again/">Like and unlike songs</a></li>
+    <li><span class="fas fa-times"></span>&nbsp;<a href="https://music4dance.blog/are-there-songs-that-you-never-want-to-dance-to-again/">Hide songs you've "unliked"</a></li>
+    <li><span class="fas fa-folder"></span>&nbsp;<a href="https://music4dance.blog/music4dance-help/saved-searches/">Save your searches</a></li>
     @*<li>
             <span class="glyphicon glyphicon-pushpin"></span> Set defaults (coming soon)
             <ul class="list-clean">
