--- a/m4d/Styles/Bootstrap3/admin-theme.less
+++ b/m4d/Styles/Bootstrap3/admin-theme.less
@@ -2,6 +2,7 @@
 @import "Include\color-nav.less";
 
 @gray-base: @admin-color;
+@foo: #00ff90;
 
 @import "Include\m4d-custom.less";
 @import "Include\Site.less";
