--- a/m4d/Views/Song/Artist.cshtml
+++ b/m4d/Views/Song/Artist.cshtml
@@ -23,7 +23,7 @@
     @{
         var scripts = new ScriptModel
         {
-            IncludeTools = true,
+            IncludeTools = false,
             DevelopmentFiles = new[] { "musicservice" }
         };
     }
