--- a/m4d/Views/Shared/_bs4-Layout.cshtml
+++ b/m4d/Views/Shared/_bs4-Layout.cshtml
@@ -1,8 +1,7 @@
-﻿@using System
-@using Microsoft.AspNetCore.Mvc.Rendering
+﻿@using Microsoft.AspNetCore.Mvc.Rendering
 <!DOCTYPE html>
 @{
-    ViewBag.BootstrapVersion = 3;
+    ViewBag.BootstrapVersion = 4;
     var help = "https://music4dance.blog/music4dance-help/";
     if (!string.IsNullOrEmpty(ViewBag.Help))
     {
@@ -52,7 +51,7 @@
         var themeBundle = "/css/" + theme + "-theme.css";
     }
     
-    <link rel="stylesheet" href="@themeBundle"/>
+    <link rel="stylesheet" href="/css/site.css"/>
     @RenderSection("styles", false)
     <script>
         (function(i, s, o, g, r, a, m) {
@@ -113,96 +112,89 @@
     </script>
 </head>
 <body>
-    <div class="navbar navbar-default navbar-custom navbar-fixed-top" role="navigation">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a href="/" class="navbar-logo">
-                    <img src="/images/header-logo.png" title="music4dance" />
-                </a>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Music <span class="caret"></span></a>
-                        <ul class="dropdown-menu" role="menu">
-                            <li>
-                                @Html.ActionLink("Dances", "index", "dances")
+    <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top" role="navigation" style="padding: 0rem 1rem">
+        <a href="/" class="navbar-brand">
+            <img src="/images/header-logo.png" height="40" title="music4dance" />
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="navbar-collapse collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Music<span class="caret"></span></a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li>
+                            @Html.ActionLink("Dances", "index", "dances", null, htmlAttributes: new { @class = "dropdown-item" })
                             <ul style="list-style-type: none" role="menu">
-                                <li>@Html.ActionLink("Ballroom", "ballroom-competition-categories", "dances")</li>
-                                <li>@Html.ActionLink("Latin", "latin", "dances")</li>
-                                <li>@Html.ActionLink("Swing", "swing", "dances")</li>
-                                <li>@Html.ActionLink("Tango", "tango", "dances")</li>
+                                <li>@Html.ActionLink("Ballroom", "ballroom-competition-categories", "dances", null, new { @class = "dropdown-item" })</li>
+                                <li>@Html.ActionLink("Latin", "latin", "dances", null, htmlAttributes: new { @class = "dropdown-item" })</li>
+                                <li>@Html.ActionLink("Swing", "swing", "dances", null, htmlAttributes: new { @class = "dropdown-item" })</li>
+                                <li>@Html.ActionLink("Tango", "tango", "dances", null, htmlAttributes: new { @class = "dropdown-item" })</li>
                             </ul>
                         </li>
                         <li>
-                            @Html.ActionLink("Song Library", "index", "song")
+                            @Html.ActionLink("Song Library", "index", "song", null, htmlAttributes: new { @class = "dropdown-item" })
                             <ul style="list-style-type: none" role="menu">
-                                <li>@Html.ActionLink("Advanced Search", "advancedsearchform", "song")</li>
+                                <li>@Html.ActionLink("Advanced Search", "advancedsearchform", "song", null, htmlAttributes: new { @class = "dropdown-item" })</li>
                             </ul>
                             <ul style="list-style-type: none" role="menu">
-                                <li>@Html.ActionLink("Add Song", "augment", "song")</li>
+                                <li>@Html.ActionLink("Add Song", "augment", "song", null, htmlAttributes: new { @class = "dropdown-item" })</li>
                             </ul>
                             <ul style="list-style-type: none" role="menu">
-                                @Html.ActionLink("New Music", "newmusic", "song", new { type = "Created" }, null)
+                                @Html.ActionLink("New Music", "newmusic", "song", new { type = "Created" }, new { @class = "dropdown-item" })
                             </ul>
                         </li>
-                        <li>@Html.ActionLink("Wedding", "wedding-music", "dances")</li>
-                        <li>@Html.ActionLink("Holiday", "holiday-music", "dances")</li>
-                        <li>@Html.ActionLink("Tags", "index", "tag")</li>
+                        <li>@Html.ActionLink("Wedding", "wedding-music", "dances", null, htmlAttributes: new { @class = "dropdown-item" })</li>
+                        <li>@Html.ActionLink("Holiday", "holiday-music", "dances", null, htmlAttributes: new { @class = "dropdown-item" })</li>
+                        <li>@Html.ActionLink("Tags", "index", "tag", null, htmlAttributes: new { @class = "dropdown-item" })</li>
                     </ul>
                 </li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Tools <span class="caret"></span></a>
-                    <ul class="dropdown-menu" role="menu">
-                        <li>@Html.ActionLink("Tempo Counter", "counter", "Home")</li>
-                        <li>@Html.ActionLink("Tempi (Tempos)", "tempi", "Home")</li>
+                <li class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Tools<span class="caret"></span></a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li>@Html.ActionLink("Tempo Counter", "counter", "Home", null, htmlAttributes: new { @class = "dropdown-item" })</li>
+                        <li>@Html.ActionLink("Tempi (Tempos)", "tempi", "Home", null, htmlAttributes: new { @class = "dropdown-item" })</li>
                     </ul>
                 </li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Info <span class="caret"></span></a>
-                    <ul class="dropdown-menu" role="menu">
-                        <li><a href="@help">Help</a></li>
-                        <li><a href="https://music4dance.blog">Blog</a></li>
-                        <li>@Html.ActionLink("FAQ", "FAQ", "Home")</li>
-                        <li>@Html.ActionLink("About Us", "About", "Home")</li>
-                        <li><a href="https://music4dance.blog/reading-list/">Reading List</a></li>
-                        <li>@Html.ActionLink("Site Map", "sitemap", "Home")</li>
-                        <li>@Html.ActionLink("Privacy Policy", "privacypolicy", "Home")</li>
-                        <li>@Html.ActionLink("Credits", "credits", "Home")</li>
+                <li class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Info<span class="caret"></span></a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a href="@help" class="dropdown-item">Help</a></li>
+                        <li><a href="https://music4dance.blog" class="dropdown-item">Blog</a></li>
+                        <li>@Html.ActionLink("FAQ", "FAQ", "Home", null, htmlAttributes: new { @class = "dropdown-item" })</li>
+                        <li>@Html.ActionLink("About Us", "About", "Home", null, htmlAttributes: new { @class = "dropdown-item" })</li>
+                        <li><a href="https://music4dance.blog/reading-list/" class="dropdown-item">Reading List</a></li>
+                        <li>@Html.ActionLink("Site Map", "sitemap", "Home", null, htmlAttributes: new { @class = "dropdown-item" })</li>
+                        <li>@Html.ActionLink("Privacy Policy", "privacypolicy", "Home", null, htmlAttributes: new { @class = "dropdown-item" })</li>
+                        <li>@Html.ActionLink("Credits", "credits", "Home", null, htmlAttributes: new { @class = "dropdown-item" })</li>
                     </ul>
                 </li>
-                <li>@Html.ActionLink("Contribute", "Contribute", "Home")</li>
-
-                @*<li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
+                <li class="nav-item">@Html.ActionLink("Contribute", "Contribute", "Home", null, new { @class = "nav-link" })</li>
                 @if (User.IsInRole("showDiagnostics"))
                 {
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin <span class="caret"></span></a>
+                    <li class="nav-item dropdown">
+                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Admin<span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
-                            <li>@Html.ActionLink("Index", "Index", "Admin")</li>
-                            <li>@Html.ActionLink("Users", "Index", "ApplicationUsers")</li>
-                            <li>@Html.ActionLink("Tags", "Tags", "Admin")</li>
-                            <li>@Html.ActionLink("Diagnostics", "Diagnostics", "Admin")</li>
-                            <li>@Html.ActionLink("Initialization and Cleanup", "InitializationTasks", "Admin")</li>
-                            <li>@Html.ActionLink("Song Scrapers", "Scraping", "Admin")</li>
-                            <li>@Html.ActionLink("PlayLists", "Index", "PlayList")</li>
+                            <li>@Html.ActionLink("Index", "Index", "Admin", null, htmlAttributes: new { @class = "dropdown-item" })</li>
+                            <li>@Html.ActionLink("Users", "Index", "ApplicationUsers", null, htmlAttributes: new { @class = "dropdown-item" })</li>
+                            <li>@Html.ActionLink("Tags", "Tags", "Admin", null, htmlAttributes: new { @class = "dropdown-item" })</li>
+                            <li>@Html.ActionLink("Diagnostics", "Diagnostics", "Admin", null, htmlAttributes: new { @class = "dropdown-item" })</li>
+                            <li>@Html.ActionLink("Initialization and Cleanup", "InitializationTasks", "Admin", null, htmlAttributes: new { @class = "dropdown-item" })</li>
+                            <li>@Html.ActionLink("Song Scrapers", "Scraping", "Admin", null, htmlAttributes: new { @class = "dropdown-item" })</li>
+                            <li>@Html.ActionLink("PlayLists", "Index", "PlayList", null, htmlAttributes: new { @class = "dropdown-item" })</li>
                             @if (User.IsInRole("dbAdmin"))
                             {
-                                <li>@Html.ActionLink("Uploads and Backups", "UploadBackup", "Admin")</li>
+                                <li>@Html.ActionLink("Uploads and Backups", "UploadBackup", "Admin", null, htmlAttributes: new { @class = "dropdown-item" })</li>
                             }
                         </ul>
                     </li>
                 }
-                </ul>
-                <partial name="_LoginPartial" />
-            </div>
+            </ul>
+            <partial name="_LoginPartial" />
         </div>
-    </div>
+    </nav>
     <div class="container-fluid body-content">
         @RenderBody()
         <div class="row">
@@ -213,7 +205,7 @@
                     @Html.ActionLink("Site Map", "sitemap", "Home") - 
                     @Html.ActionLink("Terms of Service","termsofservice","Home") - 
                     @Html.ActionLink("Privacy Policy", "privacypolicy","Home") - 
-                    @Html.ActionLink("Credits", "credits", "Home") - 
+                    @Html.ActionLink("New Credits", "credits", "Home") - 
                     <a href="@help">Help</a>
                     </p>
                 </footer>
@@ -224,9 +216,7 @@
     <environment include="Development">
         <script src="~/vendor/jquery/jquery.js"></script>
         <script src="~/vendor/jquery-validation/jquery.validate.js"></script>
-        <script src="~/vendor/bootstrap3/js/bootstrap.js"></script>
-        <script src="~/vendor/knockout/knockout-latest.debug.js"></script>
-        <script src="~/vendor/knockout-mapping/knockout.mapping.js"></script>
+        <script src="~/vendor/bootstrap/bootstrap.js"></script>
     </environment>
 
     <environment exclude="Development">
@@ -240,19 +230,10 @@
                 asp-fallback-test="window.jQuery && window.jQuery.validator"
                 integrity="sha256-sPB0F50YUDK0otDnsfNHawYmA5M0pjjUf4TvRJkGFrI= sha384-6UVI3atWyL/qZbDIJb7HW8PyHhFNMiX5rYNY2gAYcaYJjYk5cNIQShSQPBleGMYu sha512-0QDLUJ0ILnknsQdYYjG7v2j8wERkKufvjBNmng/EdR/s/SE7X8cQ9y0+wMzuQT0lfXQ/NhG+zhmHNOWTUS3kMA=="
                 crossorigin="anonymous"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-                asp-fallback-src="~/vendor/bootstrap3/bootstrap.min.js"
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+                asp-fallback-src="~/vendor/bootstrap/bootstrap.min.js"
                 asp-fallback-test="$.fn.modal"
-                integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.5.1/knockout-latest.min.js"
-                asp-fallback-src="~/vendor/knockout/knockout-latest.js"
-                asp-fallback-test="window.ko"
-                integrity="sha256-jJyt8tNAuaX/On9GARFt3EUXR5hrOz0Cyx1sXyFl1VM= sha384-PA7LgTHoYGwvEy2evWvC3sNOQlmK/vfk//sStiSk3QK3fUDO8oN3VKvHgSPyVKqx sha512-vs7+jbztHoMto5Yd/yinM4/y2DOkPLt0fATcN+j+G4ANY2z4faIzZIOMkpBmWdcxt+596FemCh9M18NUJTZwvw=="
-                crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout.mapping/2.4.1/knockout.mapping.min.js"
-                asp-fallback-src="~/vendor/knockout-mapping/knockout-mapping.min.js"
-                asp-fallback-test="window.ko.mapping"
-                integrity="sha256-gaGobNk1cPaj0abcVmyZxUYgCPsueCJwN5i4DjC4BS0= sha384-5iaafnDCmIZLLNfCHYJwy/FQZf6AXVLgSx8wPvUvkOOOFk7ODxEXwdfxgHW3dv4a sha512-1LyBPWtezbX0LO4X4QzhfZd9jSetVu5W0IFpMV9ecq4lJUQBR6hx8uiNfUI2Aoe7LCF4rK1NV3rY+uil4VJ3QQ=="
+                integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
                 crossorigin="anonymous"></script>
     </environment>
 
