Update credits (especially for BS4 realted work)
Update credits (especially for BS4 realted work)

--- a/m4d/Views/Home/Credits.cshtml
+++ b/m4d/Views/Home/Credits.cshtml
@@ -9,7 +9,8 @@
 
 <h2>Code and Libraries</h2>
 
-<p>Music4dance.net is built with <a href="http://www.asp.net/mvc">asp.net mvc5</a> using <a href="http://getbootstrap.com/">Twitter Bootstrap</a> for the presentation layter, <a href="http://azure.microsoft.com/en-us/services/sql-database/">SQL Azure</a> and <a href="http://www.asp.net/entity-framework">Entity Framework</a> for the database and <a href="http://jquery.com/">jQuery</a> and <a href="http://knockoutjs.com/">knockoutjs</a> as the primary front end libraries.</p>
+<p>Music4dance.net is built with <a href="http://www.asp.net/mvc">asp.net mvc core</a> using <a href="http://getbootstrap.com/">Twitter Bootstrap</a> for the presentation layer, <a href="http://azure.microsoft.com/en-us/services/sql-database/">SQL Azure</a> and <a href="http://www.asp.net/entity-framework">Entity Framework</a> for the database and <a href="http://jquery.com/">jQuery</a> and <a href="http://knockoutjs.com/">knockoutjs</a> as the primary front end libraries.</p>
+<p>The site uses <a href="https://docs.microsoft.com/en-us/azure/search/search-what-is-azure-search">Azure Cognitive Search</a> for managing and searching the core music database.</p>
 <p>The site is hosted on <a href="http://azure.microsoft.com">Microsoft Azure</a>.</p>
 <p>The <a href="https://cookieconsent.insites.com">cookie consent control</a> was created by <a href="https://insites.com">silktide insites</a></p>
 
@@ -20,9 +21,11 @@
 <p>The dancer silhouettes were created by Dmitry Skvorcov: © <a href="http://www.dreamstime.com/dmiskv_info#res10177599">Dmiskv</a> | <a href="http://www.dreamstime.com/#res10177599">Dreamstime.com</a> - <a href="http://www.dreamstime.com/royalty-free-stock-photography-silhouettes-pairs-dancing-image13114167#res10177599">Silhouettes Of The Pairs Dancing Photo</a></p>
 
 <p>Many of the icons on the site are provided via the twitter bootstrap inclusion of <a href="http://glyphicons.com/">Glyphicons</a></p>
+<p>We are in the process of moving the site from Bootstrap 3 to Bootstrap 4.  Bootstrap 4 pages are using <a href="https://fontawesome.com/">Font Awesome for its general icon library</a>.</p>
+
 
 <p>The specific tag icons (shoes, note, drum, and tag) are from <a href="https://icons8.com/">icons8.com</a></p>
 
 <h2>Dance</h2>
 
-<p>Much deep knowledge of Ballroom Dancing and how music relates to partner dancing has been provided over the years by Rhett Powers and Shona Baily of <a href="http://www.powersballroomstudio.com/">Powers Ballroom Studio.</a></p>
+<p>Much deep knowledge of Ballroom Dancing and how music relates to partner dancing has been provided over the years by Rhett Powers and Shona Baily of <a href="https://www.rhettshona.com/">Powers Ballroom Studio.</a></p>
