Update packages + fix resend confrim email
Update packages + fix resend confrim email

--- a/m4d/Areas/Identity/Pages/Account/Register.cshtml
+++ b/m4d/Areas/Identity/Pages/Account/Register.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Register";
 }
-@addTagHelper *, reCAPTCHA
+@addTagHelper *, Owl.reCAPTCHA
 
 <h1>@ViewData["Title"]</h1>
 
