Small fixes to bootstrap 4 integration
Small fixes to bootstrap 4 integration
- Correctly handle top padding for menu
- Fix breadcrumbs on account management page
- Get rid of crowd-note link since it seems to have died

--- a/m4d/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/m4d/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -2,11 +2,13 @@
     Layout = "/Views/Shared/_bs4-Layout.cshtml";
 }
 
-<ol class="breadcrumb">
-    <li><a href="/">Music4Dance</a></li>
-    <li><a href="/Identity/Account/Manage">@ViewBag.UserName</a></li>
-    <li class="active">@ViewBag.Title</li>
-</ol>
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="/">Music4Dance</a></li>
+        <li class="breadcrumb-item"><a href="/Identity/Account/Manage">@ViewBag.UserName</a></li>
+        <li class="breadcrumb-item active" aria-current="page">@ViewBag.Title</li>
+    </ol>
+</nav>
 
 <h1>Manage your account</h1>
 
