Fix script inclusion in songdetails
Fix script inclusion in songdetails

--- a/m4d/Views/Song/Details.cshtml
+++ b/m4d/Views/Song/Details.cshtml
@@ -101,7 +101,7 @@
         {
             IncludeTools = true,
             DevelopmentFiles = new[] { "counter", "tagchooser", "edit" },
-            ReleaseFiles = new[] { "search", },
+            ReleaseFiles = new[] { "songdetails", },
         };
     }
 
