--- a/m4d/Views/Song/AzureSearch.cshtml
+++ b/m4d/Views/Song/AzureSearch.cshtml
@@ -112,7 +112,7 @@ else
         var scripts = new ScriptModel
         {
             IncludeTools = true,
-            DevelopmentFiles = new[] { "counter", "tagchooser", "edit" },
+            DevelopmentFiles = new[] { "jquery.autocomplete", "musicservice", "tagchooser", "catalog", "azuresearch" },
             ReleaseFiles = new[] { "search", },
         };
     }
