Fix vite.aspnet warning

--- a/m4d/Views/Shared/_vue-css.cshtml
+++ b/m4d/Views/Shared/_vue-css.cshtml
@@ -27,7 +27,7 @@ private List<string> CssFromManifest(string key)
 }
 
 private string Base => "vclient";
-private string ProdCss => Manifest[$"{Base}/style.css"]?.File;
+private string ProdCss => Manifest[$"style.css"]?.File;
 }
 
 @if (ProdCss != null)
