blog update May 2025 + github links

--- a/m4d/Views/Home/Credits.cshtml
+++ b/m4d/Views/Home/Credits.cshtml
@@ -21,6 +21,7 @@ ViewBag.BreadCrumbs = BreadCrumbItem.BuildInfoTrail(ViewBag.Title);
     <li>The site is hosted on <a href="http://azure.microsoft.com" target="_blank">Microsoft Azure</a>.</li>
     <li>The <a href="https://cookieconsent.insites.com" target="_blank">cookie consent control</a> was created by <a href="https://insites.com" target="_blank">silktide insites</a></li>
     <li>The <a href="https://browser-update.org/update-browser.html#3" target="_blank">browser update notification</a> is supplied by <a href="https://browser-update.org/" target="_blank">browser-update.org</a></li>
+    <li>The <a href="https://github.com/music4dance/music4dance" target="_blank">music4dance source</a> is hosted on github which shows a <a href="https://github.com/music4dance/music4dance/graphs/contributors" target="_blank">list of contributors</a> to the code </li>
 </ul>
 
 <h2>Design</h2>
@@ -30,9 +31,8 @@ ViewBag.BreadCrumbs = BreadCrumbItem.BuildInfoTrail(ViewBag.Title);
     <li>The dancer silhouettes were created by Dmitry Skvorcov: © <a href="http://www.dreamstime.com/dmiskv_info#res10177599" target="_blank">Dmiskv</a> | <a href="http://www.dreamstime.com/#res10177599" target="_blank">Dreamstime.com</a> - <a href="http://www.dreamstime.com/royalty-free-stock-photography-silhouettes-pairs-dancing-image13114167#res10177599" target="_blank">Silhouettes Of The Pairs Dancing Photo</a></li>
     <li>Most of the icons on the site are from the <a href="https://icons.getbootstrap.com/" target="_blank">Bootstrap Icons library</a>.</li>
     <li>The specific tag icons (shoes, note, drum, and tag) are from <a href="https://icons8.com/" target="_blank">icons8.com</a></li>
-
 </ul>
 
 <h2>Dance</h2>
 
-<p>Much deep knowledge of Ballroom Dancing and how music relates to partner dancing has been provided over the years by Rhett Powers and Shona Baily of <a href="https://www.linkedin.com/in/powersballroomstudio/" target="_blank">Powers Ballroom Studio.</a></p>
+<p>Much deep knowledge of Ballroom Dancing and how music relates to partner dancing has been provided over the years by Rhett Powers and Shona Baily of Powers Ballroom Studio.</p>
