--- a/m4d/Views/Shared/_bs5-Layout.cshtml
+++ b/m4d/Views/Shared/_bs5-Layout.cshtml
@@ -73,6 +73,7 @@ List<BreadCrumbItem> breadCrumbs = ViewBag.BreadCrumbs;
             @Html.ActionLink("Terms of Service", "termsofservice", "Home") -
             @Html.ActionLink("Privacy Policy", "privacypolicy", "Home") -
             @Html.ActionLink("Credits", "credits", "Home") -
+            <a href="https://github.com/music4dance/music4dance" target="_blank">Code</a> - 
             <a href="@help">Help</a>
         </p>
     </footer>
